--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -20,6 +20,11 @@ h3 {
     font-family: "Montserrat", serif;
 }
 
+.profile img {
+    width: 150px;
+    height: 150px;
+}
+
 .top-container {
     background-color: #E4F9E5;
     position: relative;
